# Specify we built a library
lib_LTLIBRARIES = libeasykf.la

# Specify where the headers will be installed
library_includedir=$(includedir)/easykf
# Specify which headers to install
library_include_HEADERS= \
	ukf.h \
	ukf_types.h\
	ukf_math.h\
	ukf_samples.h\
	ukf_parameter_scalar.h \
	ukf_parameter_ndim.h\
	ukf_state_ndim.h\
	ukf_sr_state_ndim.h\
	ekf_types.h \
	ekf.h

# There is only headers
libeasykf_la_SOURCES = 

EXTRA_DIST =



